# openclaw-loops

./: .gitignore  INTEGRATION.md  README.md  USAGE.md  openclaw  openclaw.cmd  pyproject.toml
adapters/: __init__.py  ephemeral_kw.py  lobster.py  seo.py  workshop.py  workshop_sop.py  x_social.py
cli/: openclaw.py
config/: openclaw.yaml
core/: __init__.py  bridge.py  config.py  logger.py  orchestrator.py  registry.py  state.py  verifier.py
data/: cms_notfound_bot_ids.json  env_mismatch_bot_ids.json
loops/: base.py
loops/bot_listing/: step1_seo_scrape.py  step2_demand_intake.py  step3_workshop_review.py  step4_acceptance.py  step5_publish.py  step6_feedback.py  step7_optimize.py  step8_notify.py
loops/social_ops/: step1_kw_calendar.py  step2_content_pipeline.py  step3_engagement.py  step4_analytics.py
scripts/: daily-loops-report.sh  daily_dm_bobo.py  daily_upload_snapshot.py  dump_bo_snapshot.py  upload_bot_status.py
tests/: test_smoke.py  test_step2_demand_intake.py  test_upload_bot_status.py  test_workshop_sop.py
